add javascript to try and get site to deploy correctly

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       <h3><a href="#">Work</a></h3>
     </div>
     <div class="square">
-      <h3><a href="#">Skills</a></h3>
+      <h3><a class="skills-link" href="#skills">Skills</a></h3>
     </div>
     <div class="square">
-      <h3><a href="#">Resume</a></h3>
+      <h3><a id="resume-link" href="#">Resume</a></h3>
     </div>
   </nav>
   <footer class="contact footer fixed-bottom d-flex">
