changed image hover behavior

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="top-content">
+  <div class="top-content art-backsplash about-me-backsplash work-backsplash skills-backsplash resume-backsplash">
     <header class="container-fluid">
       <div class="d-inline-block">
         <h1 class="text-center align-self-center">Hi, I'm Matt </h1>
