fix broken links

--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@
             restriction on how they can communicate.
           </p>
           <div class="visit">
-            <h5 class="link-border"><a class="contact bold" href="#">Visit the site</a></h5>
+            <h5 class="link-border"><a class="contact bold" href="https://freef.github.io/capstone-client/#/">Visit the site</a></h5>
             <p>Test Username: demo@demo </p><p> Password: demo</p>
-            <h5 class="link-border"><a class="contact bold" href="#">Check it out on GitHub</a></h5>
+            <h5 class="link-border"><a class="contact bold" href="https://github.com/freef/capstone-client">Check it out on GitHub</a></h5>
           </div>
         </div>
       </div>
@@ -339,9 +339,9 @@
             Letterbox is a blogging platform made in as part of a small team. I contributed primarily to the back end on this project by creating routes for users to "like" blog posts. These likes were then used to assign each post a numerical score
             that determined their sorting order. Posts with more likes appeared at the top of the page as did newer posts. I also worked on input validation.</p>
           <div class="visit">
-            <h5 class="link-border"><a class="contact bold" href="#">Visit the site</a></h5>
+            <h5 class="link-border"><a class="contact bold" href="https://m-d-h-s.github.io/mdhs-blog-frontend/">Visit the site</a></h5>
             <p>Test Username: demo@demo </p><p> Password: demo</p>
-            <h5 class="link-border"><a class="contact bold" href="#">Check it out on GitHub</a></h5>
+            <h5 class="link-border"><a class="contact bold" href="https://github.com/m-d-h-s/mdhs-blog-frontend">Check it out on GitHub</a></h5>
           </div>
         </div>
         <div class="letterbox-image"></div>
@@ -358,9 +358,9 @@
           <p>Mario Verde is a website I designed to make it easier to play video games with other people online. The idea for the project grew out of my frustartion with the lack of social features on the Nintendo Switch. The client uses HTML, CSS,
             jQuery, and Javascript. The back end was made using Ruby on Rails. The major take away with this project was the importance of naming conventions, as having a resource called Events created massive headaches.</p>
             <div class="visit">
-              <h5 class="link-border"><a class="contact bold" href="#">Visit the site</a></h5>
+              <h5 class="link-border"><a class="contact bold" href="https://freef.github.io/mario-verde/">Visit the site</a></h5>
               <p>Test Username: demo@demo </p><p> Password: demo</p>
-              <h5 class="link-border"><a class="contact bold" href="#">Check it out on GitHub</a></h5>
+              <h5 class="link-border"><a class="contact bold" href="https://github.com/freef/mario-verde">Check it out on GitHub</a></h5>
             </div>
         </div>
       </div>
@@ -376,9 +376,9 @@
           For this project I implmented the classic game of Tic-Tac-Toe. The client makes calls to a third party api which keeps a record of all the games. My implementation allows the user to view and continue unfinished games.
           </p>
           <div class="visit">
-            <h5 class="link-border"><a class="contact bold" href="#">Visit the site</a></h5>
+            <h5 class="link-border"><a class="contact bold" href="https://freef.github.io/tictactoe/">Visit the site</a></h5>
             <p>Test Username: demo@demo </p><p> Password: demo</p>
-            <h5 class="link-border"><a class="contact bold" href="#">Check it out on GitHub</a></h5>
+            <h5 class="link-border"><a class="contact bold" href="https://github.com/freef/tictactoe">Check it out on GitHub</a></h5>
           </div>
         </div>
         <div class="tic-tac-image"></div>
